--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ body{
     font-size: 1.8vw;
     transition: all 0.5s;
     font-family: "Dancing Script";
+    
 }
 .main-nav-link:hover{
     color: #fff;
@@ -415,6 +416,9 @@ model-viewer{
     height: auto;
     padding: 10vh 10vw;
 }
+#project{
+    scroll-behavior: smooth;
+}
 
 .project::before{
     content: "";
@@ -452,11 +456,26 @@ model-viewer{
     display: grid;
     place-items: center;
     text-align: center;
+    border-radius: 100px;
+    box-shadow: 2px 3px 10px #fffa;
+    transition: all 0.5s;
+    background-color: #010115;
+    transition: transform 1s;
+}
+.project-file:hover{
+    transform: scale(1.1); 
+    box-shadow: 4px 6px 20px #fffa;
 }
 
 .images{
     width: 25vw;
+    filter: drop-shadow(8px 2px 8px #fffa);
+    transition: transform 1s;
 }
+.images:hover{
+    transform: scale(1.2);
+}
+
 .main-project-title{
     color: #fff;
     font-size: 2vw;
@@ -469,28 +488,9 @@ model-viewer{
     color: #fffa;
     width: 20vw;
     padding-top: 5vh;
-    font-size: 1.4vw;
+    font-size: 1.2vw;
     font-family: "EB Garamond";
     stroke-linejoin: 1.2;
-}
-.btn{
-    display: grid;
-    place-items: center;
-    width: 10vw;
-    height: 5vh;
-    margin-top: 5vh;
-    text-decoration: none;
-    border-radius: 15px;
-    background-color: #010115;
-    box-shadow: 0 0 5px #fffa;
-    color: #fffa;
-    font-size: 1.4vw;
-    font-family: "Eb Garamond";
-    transition: all 0.5s;
-}
-
-.btn:hover{
-    box-shadow: 0 0 10px rgb(140, 56, 224);
 }
 
 /* final */
@@ -521,9 +521,10 @@ model-viewer{
 
 .form-title{
     text-align: center;
-    color: #fff;
-    font-size: 3.5vw;
+    color: rgb(173, 161, 238);
+    font-size: 5vw;
     font-family: "Dancing Script";
+    margin-bottom: 25px ;
 }
 
 #form{
@@ -532,7 +533,11 @@ model-viewer{
     width: 48vw;
     height: 70vh;
     background-color: #16063a;
-    border-radius: 15px;
+    border-radius: 40% 20% 40% 20%;
+    box-shadow: 0 0 20px rgb(162, 155, 249);
+}
+#form-box{
+    scroll-behavior: smooth;
 }
 .form-content{
     position: absolute;
@@ -548,23 +553,27 @@ model-viewer{
     width: 45vw;
     height: 10vh;
     margin-top: -55vh;
+    
 }
 .email-input,
 .subject-input{
-    width: 40vw;
+    width: 38vw;
     height: 5vh;
-    border-radius: 5px;
+    /* border-radius: 5px; */
+    background-color:rgb(183, 173, 236) ;
     padding-left:5px;
     font-size: 1.4vw;
+    border-radius: 40px 10px;
     font-family: "EB Garamond"; 
+    filter: brightness(115%);
 }
 .email-title,
 .subject-title,
 .message-title{
-    color: #fffa;
-    margin-left: -40vw;
-    font-size: 1.4vw;
+    color: rgb(154, 142, 222);
+    font-size: 1.6vw;
     font-family: "EB Garamond";
+    text-shadow: 0 0 20px #cde0f3;
 }
 .subject-box{
     position: absolute;
@@ -582,33 +591,82 @@ model-viewer{
     margin-top: 18vh;
 }
 .message-input{
-    width: 40vw;
+    width: 38vw;
     height: 30vh;
-    border-radius: 5px;
+    border-radius: 40px 10px;
     padding-left:5px;
     padding-top: 5px;
     font-size: 1.4vw;
     font-family: "EB Garamond"; 
+    background-color:rgb(183, 173, 236) ;
+    filter: brightness(115%);
 }
-#buttons{
+.buttons{
     display: grid;
     place-items: center;
     grid-template-columns: 1fr 1fr;
-    width: 30vw;
+    width: 15vw;
     height: 5vh;
     text-align: center;
     margin-top: 4vh;
 }
-.send-button,
-.reset-button{
-    width: 7vw;
-    height: 5vh;
-    cursor: pointer;
-    font-family: "EB Garamond";
-    border-radius: 15px;
-    font-size: 1.4vw;
-    box-shadow: 0 0 10px #fff;
+.button-send{
+    margin-right: 100px;
+    margin-top: 40px;
 }
+
+.button-send,.button-reset {
+  
+
+  --glow-color: rgb(162, 155, 249);
+  --glow-spread-color: rgba(149, 123, 255, 0.781);
+  --enhanced-glow-color: rgb(170, 163, 253);
+  --btn-color: rgb(67, 61, 136);
+  border: .20em solid var(--glow-color);
+  padding: 1em 3em;
+  color: var(--glow-color);
+  font-size: 15px;
+  font-weight: bold;
+  background-color: var(--btn-color);
+  border-radius: 1em;
+  outline: none;
+  box-shadow: 0 0 1em .20em var(--glow-color),
+        0 0 4em 1em var(--glow-spread-color),
+        inset 0 0 .75em .20em var(--glow-color);
+  text-shadow: 0 0 .5em var(--glow-color);
+  position: relative;
+  transition: all 0.3s;
+ 
+  }
+
+  .button-send::after,.button-reset::after {
+  pointer-events: none;
+  content: "";
+  position: absolute;
+  top: 120%;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: var(--glow-spread-color);
+  filter: blur(2em);
+  opacity: .7;
+  transform: perspective(1.5em) rotateX(35deg) scale(1, .6);
+}
+
+.button-send:hover,.button-reset:hover {
+  color: var(--btn-color);
+  background-color: var(--glow-color);
+  box-shadow: 0 0 1em .25em var(--glow-color),
+        0 0 4em 2em var(--glow-spread-color),
+        inset 0 0 .75em .25em var(--glow-color);
+}
+
+.button-send:active,.button-reset:active {
+  box-shadow: 0 0 0.6em .25em var(--glow-color),
+        0 0 2.5em 2em var(--glow-spread-color),
+        inset 0 0 .5em .25em var(--glow-color);
+}
+
 /* spinner */
 #spinner{
     position: absolute;
